<resources>
    <string name="app_name">Firebase_Chat_001</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="hint_full_name">Full Name</string>
    <string name="hint_phone">Phone</string>

    <!-- Validate -->
    <string name="at_least_1_number_or_special_char">- Include at least 1 number or symbol (!@#%^).</string>
    <string name="upper_and_lower_case">- Upper and lower case characters.</string>
    <string name="empty_field">- This field is empty.</string>
    <string name="less_than_8_char">- At least 8 characters.</string>
    <string name="wrong_email_format">- Wrong email format.</string>
    <string name="more_than_255_char">- More than 255 characters.</string>
    <string name="contain_special_char">- Contain special characters.</string>
    <string name="contain_invalid_word">- Contain invalid characters.</string>
    <string name="msg_register_successfully">Register successfully!</string>
    <string name="please_input_title_group">Please input title group</string>

    <string name="msg_logging_in">Logging in…</string>
    <string name="msg_registering">Registering…</string>
    <string name="menu_chat">Chat</string>
    <string name="menu_friends">Friends</string>
    <string name="menu_profile">Profile</string>
    <string name="profile_email">Email</string>
    <string name="profile_phone">Phone</string>
    <string name="profile_logout">Logout</string>
    <string name="title_chat_screen">Chat</string>
    <string name="title_friend_screen">Friend</string>
    <string name="hint_search">Search</string>
    <string name="your_friends">Your friends</string>
    <string name="friend_requests">Friend Requests</string>
    <string name="action_add">Add</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="msg_error_something_wrong">Something was wrong.</string>
    <string name="group_title">Title</string>
    <string name="group_description">Description</string>
    <string name="group_member">Member</string>
    <string name="group">Group</string>
    <string name="member">Member</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="action_add_group">Add Group</string>
    <string name="action_update_group">Update Group</string>
    <string name="action_add_member">Add Member</string>
    <string name="msg_creating_group">Creating group…</string>
    <string name="msg_updating_group">Updating group…</string>
    <string name="msg_session_expired">Session has expired. Please login again!</string>
    <string name="friend">Friend</string>
    <string name="email_does_not_exist">Email does not exist</string>
    <string name="action_sent">Sent</string>
    <string name="msg_have_a_request_from_user">You have a friend request from that user</string>
    <string name="msg_already_friend">Already your friend</string>
    <string name="hint_tape_message">Tape a message</string>
    <string name="edit_group">Edit group</string>
    <string name="description">Description</string>
    <string name="leave_group">Leave group</string>
    <string name="alert_leave_group">Do you want to exit group?</string>
    <string name="alert_ok">OK</string>
    <string name="alert_cancel">Cancel</string>
    <string name="msg_delete_group">Deleting group…</string>
    <string name="uploading">Uploading…</string>
    <string name="permission_denied">Permission Denied!</string>
    <string name="select_photo">Select Photo</string>
    <string name="add_friend">Add Friend</string>
    <string name="unfriend">Unfriend</string>
    <string name="conversation">Conversation</string>
    <string name="button_sent_request">Sent Request</string>
    <string name="button_accept_friend">Accept Friend</string>
</resources>
