<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".screen.main.create_group.CreateGroupFragment">

    <ImageView
            android:id="@+id/image_group_avatar"
            android:layout_width="@dimen/dp_70"
            android:layout_height="@dimen/dp_70"
            app:srcCompat="@drawable/ic_add_photo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/dp_10"/>

    <EditText
            android:id="@+id/edit_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/group_title"
            app:layout_constraintTop_toBottomOf="@id/image_group_avatar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="@dimen/dp_5"
            android:background="@drawable/custom_edittext_square"
            android:layout_margin="@dimen/dp_20"/>

    <EditText
            android:id="@+id/edit_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_5"
            android:background="@drawable/custom_edittext_square"
            android:hint="@string/group_description"
            app:layout_constraintTop_toBottomOf="@id/edit_title"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginEnd="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_10"/>

    <android.support.constraint.ConstraintLayout
            android:id="@+id/constraint_layout_member"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/edit_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@color/lowGrey"
            android:padding="@dimen/dp_5"
            android:layout_marginTop="@dimen/dp_10">
        <TextView
                android:id="@+id/text_members"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/group_member"
                android:layout_marginLeft="@dimen/dp_20"
                android:layout_marginStart="@dimen/dp_20"/>
        <ImageView
                android:id="@+id/image_add_members"
                app:srcCompat="@drawable/ic_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="@dimen/dp_15"
                android:layout_marginRight="@dimen/dp_15"/>
    </android.support.constraint.ConstraintLayout>

    <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view_members"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0"
            app:layout_constraintTop_toBottomOf="@id/constraint_layout_member"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/button_add_group"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginEnd="@dimen/dp_20"/>

    <Button
            android:id="@+id/button_add_group"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_25"
            android:text="@string/action_add_group"
            android:textAllCaps="false"
            android:background="@color/blue"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_12"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
</android.support.constraint.ConstraintLayout>
