<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:focusable="true"
        android:clickable="true"
        tools:context=".screen.main.user_detail.UserDetailFragment">

    <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            app:titleTextColor="@android:color/white"
            android:background="?attr/colorPrimary"
            app:navigationIcon="?homeAsUpIndicator"/>

    <ImageView
            android:id="@+id/image_avatar"
            android:layout_width="@dimen/dp_70"
            android:layout_height="@dimen/dp_70"
            app:srcCompat="@drawable/ic_profile"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/dp_50"/>

    <TextView
            android:id="@+id/text_full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/image_avatar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/dp_10"
            android:textSize="@dimen/sp_20"
            android:textStyle="bold"
            android:gravity="center"/>

    <android.support.constraint.ConstraintLayout
            android:id="@+id/constraint_layout_action"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/text_full_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginEnd="@dimen/dp_20"
    >

        <android.support.constraint.ConstraintLayout
                android:id="@+id/constraint_layout_friend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:visibility="gone">

            <Button
                    android:id="@+id/button_conversation"
                    android:layout_width="@dimen/dp_120"
                    android:layout_height="@dimen/dp_25"
                    android:textAllCaps="false"
                    android:text="@string/conversation"
                    android:background="@drawable/custom_button_positive"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/button_un_friend"/>

            <Button
                    android:id="@+id/button_un_friend"
                    android:layout_width="@dimen/dp_120"
                    android:layout_height="@dimen/dp_25"
                    android:textAllCaps="false"
                    android:text="@string/unfriend"
                    android:background="@drawable/custom_button_negative"
                    app:layout_constraintStart_toEndOf="@id/button_conversation"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

        </android.support.constraint.ConstraintLayout>

        <Button
                android:id="@+id/button_add_friend"
                android:layout_width="@dimen/dp_120"
                android:layout_height="@dimen/dp_25"
                android:textAllCaps="false"
                android:text="@string/add_friend"
                android:background="@drawable/custom_button_positive"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:visibility="gone"/>

    </android.support.constraint.ConstraintLayout>

    <TextView
            android:id="@+id/text_title_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_email"
            app:layout_constraintTop_toBottomOf="@id/constraint_layout_action"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginLeft="@dimen/dp_20"
            android:textSize="@dimen/sp_17"
            android:textStyle="bold"/>

    <TextView
            android:id="@+id/text_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/text_title_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginLeft="@dimen/dp_20"/>

    <TextView
            android:id="@+id/text_title_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_phone"
            app:layout_constraintTop_toBottomOf="@id/text_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginLeft="@dimen/dp_20"
            android:textSize="@dimen/sp_17"
            android:textStyle="bold"/>

    <TextView
            android:id="@+id/text_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/text_title_phone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginLeft="@dimen/dp_20"/>

</android.support.constraint.ConstraintLayout>
